# cfr-lab

./: .gitignore  AGENTS.md  README.md  pyproject.toml
artifacts/: kuhn_cfr.json
docs/: README.md
docs/kuhn/: kuhn-nash.md  kuhn-rule.md
src/: kuhn-nash.md
src/kuhn/: calculate_alpha.py  compare.md  kuhn_cfr_flow.py  kuhn_poker.py  ui_tree.py  vanilla_cfr.py
src/kuhn/gemini/: app.py  calculate_alpha.py  cfr_backend.py  kuhn_poker.py  viz.py
src/kuhn/gpt/: kuhn_poker.py
